# fast_ctd

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEGMENTS.md  CITATION.cff  CODEOWNERS  COPYING  LICENSE  README.md  meson.build  meson.options  pyproject.toml
.github/workflows/: ci.yml
conda/: environment.yml
examples/: stp_to_dagmc_workflow.py
examples/data/: EUDEMO-materials.csv  test_cubes-mats.csv
fast_ctd/: __init__.py  logging.py  tools.py  utils.py
src/: binding.cpp
src/occ_faceter/: MBTool.cpp  MBTool.hpp  README.md  brep_faceter.cpp  brep_faceter.hpp  meson.build  occ_faceter.cc  occ_faceter.cpp  occ_faceter.hh  occ_faceter.hpp  xyz_to_entity_map.hpp
src/occ_merger/: README.md  geometry.cpp  geometry.hpp  meson.build  occ_merger.cpp  occ_merger.hpp  step_to_brep.cpp  step_to_brep.hpp  utils.cpp  utils.hpp
src/occ_merger/salome/: README.md  geom_gluer copy.cpp  geom_gluer.cpp
subprojects/: spdlog.wrap
tests/: test_tools.py
tests/test_data/: box_cyl_not_wt.h5m  test_cubes.h5m  test_cubes.stp
