[project]
name = 'fast_ctd'
version = '0.1.0'
description = 'Fast CAD to DAGMC conversion toolset'
readme = 'README.md'
requires-python = '>=3.10'
license = ''

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov"]

[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson >= 1.1.0',
]
