[project]
name = 'fast_ctd'
version = '0.1.0'
description = 'Fast CAD to DAGMC conversion toolset'
readme = 'README.md'
requires-python = '>=3.10'
license = ''

[project.optional-dependencies]
dev = ["meson", "meson-python", "pre-commit", "pytest", "pytest-cov", "ruff==0.11.7"]

[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson >= 1.1.0',
]

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["ALL"]
ignore = [
    "E501",  # line too long
    "E203",  # whitespace before ':'
    "E722",  # do not use bare 'except'
    "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never used
    "F405",  # name may be undefined, or defined from star imports: module
    "F841",  # local variable is assigned to but never used
    "EM102",
    "ERA001",
    "TRY002",
    "TRY003"
]